[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/behavior/flying.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/spaceship.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/spaceship_night.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/sfx/spaceship_hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx/8_spaceshipexplosion.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "finished_stage"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 165.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[node name="Spaceship" type="Area2D" groups=[
"player",
]]
position = Vector2( 165, 0 )
collision_layer = 3
collision_mask = 6
script = ExtResource( 1 )

[node name="spaceship_day" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="spaceship_night" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 11, 7 )
polygon = PoolVector2Array( -7, -6, 1, -1, 9, -1, 9, 4, 1, 4, -7, 7 )

[node name="shot_position" type="Position2D" parent="."]
position = Vector2( 21, 6 )

[node name="explosion_position" type="Position2D" parent="."]
position = Vector2( 13, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/finished_stage = SubResource( 1 )
anims/hurt = SubResource( 2 )

[node name="spawn_position" type="Position2D" parent="."]
position = Vector2( 14, 42 )

[node name="missile_position" type="Position2D" parent="."]
position = Vector2( 22, 8 )

[node name="explosion_timer" type="Timer" parent="."]
wait_time = 0.39

[node name="hurt_timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.808

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -18.909
[connection signal="area_entered" from="." to="." method="_on_Spaceship_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Spaceship_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="hurt_timer" to="." method="_on_hurt_timer_timeout"]
